--- a/OLX-Slayer/src/app/home/navigation/navigation.component.html
+++ b/OLX-Slayer/src/app/home/navigation/navigation.component.html
@@ -11,6 +11,7 @@
 		<ul class="">
 			<li><a [routerLink]="['/']">Home</a></li>
 			<li><a [routerLink]="['/advertisements']">Advertisements</a></li>
+			<li><a [routerLink]="['/chats']">Chats</a></li>
 		</ul>
 		<ul class="right">
 			<li><a (click)="openSignUpModal()">Register</a></li>
