--- a/OLX-Slayer/src/app/chat/chatroom/messages-list/messages-list.component.html
+++ b/OLX-Slayer/src/app/chat/chatroom/messages-list/messages-list.component.html
@@ -5,3 +5,6 @@
     <b>{{msg.author}} said</b> : {{msg.text}}
   </div>
 <hr>
+<a class="right" (click)="onRefreshClick()">
+  <i class="material-icons">refresh</i>
+</a>
