--- a/OLX-Slayer/src/app/auth/components/login/login.component.html
+++ b/OLX-Slayer/src/app/auth/components/login/login.component.html
@@ -1,19 +1,21 @@
-<div class="modal-header">
-  <h4>Log in</h4>
-</div>
-<div class="modal-body">
-  <div *ngIf="error">
-    <p>{{error}}</p>
+<div class="container">
+  <div class="row">
+    <div class="span4 offset4 well">
+      <legend>Please Sign In</legend>
+      <div *ngIf="error" class="alert alert-error">
+        <p>{{error}}</p>
+      </div>
+      <form #formData='ngForm' (ngSubmit)="onSubmit(formData)">
+        <div class="form-group">
+          <label for="inputEmail">Email address:</label>
+          <input class="form-control" name="email" type="email" placeholder="Email" id="inputEmail" required (ngModel)="email">
+        </div>
+        <div class="form-group">
+          <label for="inputPassword">Password:</label>
+          <input class="form-control" name="password" type="password" placeholder="Password" id="inputPassword" required (ngModel)="password">
+        </div>
+        <button type="submit" class="btn btn-primary" [disabled]="!formData.valid">Submit</button>
+      </form>
+    </div>
   </div>
-  <form #formData='ngForm' (ngSubmit)="onSubmit(formData)">
-    <div class="form-group">
-      <label for="inputEmail">Email address:</label>
-      <input class="form-control" name="email" type="email" placeholder="Email" id="inputEmail" required (ngModel)="email">
-    </div>
-    <div class="form-group">
-      <label for="inputPassword">Password:</label>
-      <input class="form-control" name="password" type="password" placeholder="Password" id="inputPassword" required (ngModel)="password">
-    </div>
-    <button type="submit" class="btn btn-primary" [disabled]="!formData.valid">Log in</button>
-  </form>
 </div>
