--- a/OLX-Slayer/src/app/home/navigation/navigation.component.html
+++ b/OLX-Slayer/src/app/home/navigation/navigation.component.html
@@ -13,8 +13,10 @@
 			<li><a [routerLink]="['/advertisements']">Advertisements</a></li>
 		</ul>
 		<ul class="right">
-			<li><a [routerLink]="['/signup']">Register</a></li>
-			<li><a [routerLink]="['/login']">Login</a></li>
+			<li><a *ngIf="isLogedIn === false" [routerLink]="['/signup']">Register</a></li>
+			<li><a *ngIf="isLogedIn === false" [routerLink]="['/login']">Login</a></li>
+			<li><a *ngIf="isLogedIn === true" [routerLink]="['/profile']">Profile</a></li>
+			<li><a *ngIf="isLogedIn === true" (click)="signOut()">Sign Out</a></li>
 
 		</ul>
 	</div>
