added alert for message when reseting password

--- a/OLX-Slayer/src/app/components/user.profile/user.profile.component.html
+++ b/OLX-Slayer/src/app/components/user.profile/user.profile.component.html
@@ -61,7 +61,9 @@
             <tab heading="Change Password">
                 <div class="container">
                     <div *ngIf="message">
-                        {{ message }}
+                        <alert type="info">
+                            <strong>{{ message }}</strong>
+                        </alert>
                     </div>
                     <h2>Reset Password</h2>
                     <form #formData='ngForm' (ngSubmit)="onSubmitResetPassword(formData)">
