--- a/OLX-Slayer/src/app/components/create.advertisment/create.advertisment.component.html
+++ b/OLX-Slayer/src/app/components/create.advertisment/create.advertisment.component.html
@@ -26,7 +26,7 @@
         </div>
         <br>
         <div class="col">
-          <h6>Category you have chosen is: {{category}} . </h6>
+          <h6>Category you have chosen is: <strong>{{category}}</strong> . </h6>
         </div>
       </div>
       <br>
