added validation and alert messages changed data bindings

--- a/OLX-Slayer/src/app/components/create.advertisment/create.advertisment.component.html
+++ b/OLX-Slayer/src/app/components/create.advertisment/create.advertisment.component.html
@@ -60,21 +60,21 @@
       <div class="row">
         <div class="form-group">
           <label for="city">City:  *</label>
-          <input type="text" id="city" placeholder="City" name="city" value={{userDetails.address.city}} class="form-control" disabled>
+          <input type="text" id="city" placeholder="City" name="city" value={{userProfile.city}} class="form-control" disabled>
         </div>
         <div class="form-group">
           <label for="address">Address:  *</label>
-          <input type="text" id="address" placeholder="Address" name="address" value={{userDetails.address.addressOne}} class="form-control"
+          <input type="text" id="address" placeholder="Address" name="address" value={{userProfile.addressOne}} class="form-control"
             disabled>
         </div>
         <div class="form-group">
           <label for="username">Username:  *</label>
-          <input type="text" id="username" placeholder="Username" name="username" value={{userDetails.details.username}} class="form-control"
+          <input type="text" id="username" placeholder="Username" name="username" value={{userProfile.username}} class="form-control"
             disabled>
         </div>
         <div class="form-group">
           <label for="phoneNumber">Phone Number:  *</label>
-          <input type="text" id="phoneNumber" placeholder="PhoneNumber" name="phoneNumber" value={{userDetails.details.phoneNumber}}
+          <input type="text" id="phoneNumber" placeholder="PhoneNumber" name="phoneNumber" value={{userProfile.phoneNumber}}
             class="form-control" disabled>
         </div>
       </div>
