--- a/OLX-Slayer/src/app/user.profile/user.profile/user.profile.component.html
+++ b/OLX-Slayer/src/app/user.profile/user.profile/user.profile.component.html
@@ -31,19 +31,19 @@
                 <form (ngSubmit)="onSubmitUserDetails()">
                     <div class="form-group">
                         <label for="address-one">Address 1:</label>
-                        <input type="text" id="address-one" placeholder="First address" name="addressOne" class="form-control" [(ngModel)]="userProfile.addressOne">
+                        <input type="text" id="address-one" placeholder="change your First address" name="addressOne" class="form-control" [(ngModel)]="userProfile.addressOne">
                     </div>
                     <div class="form-group">
                         <label for="address-two">Address 2:</label>
-                        <input type="text" id="address-two" placeholder="Second address" name="addressTwo" class="form-control" [(ngModel)]="userProfile.addressTwo">
+                        <input type="text" id="address-two" placeholder="change your Second address" name="addressTwo" class="form-control" [(ngModel)]="userProfile.addressTwo">
                     </div>
                     <div class="form-group">
                         <label for="city">City:</label>
-                        <input type="text" id="city" placeholder="City" name="city" class="form-control" [(ngModel)]="userProfile.city">
+                        <input type="text" id="city" placeholder="change your City" name="city" class="form-control" [(ngModel)]="userProfile.city">
                     </div>
                     <div class="form-group">
                         <label for="country">Country:</label>
-                        <input type="text" id="country" placeholder="Country" name="country" class="form-control" [(ngModel)]="userProfile.country">
+                        <input type="text" id="country" placeholder="change your Country" name="country" class="form-control" [(ngModel)]="userProfile.country">
                     </div>
                     <div>
                         <button class="btn btn-primary">Update</button>
@@ -52,7 +52,7 @@
             </tab>
             <tab heading="Profile Picture">
                 <div class="text-center">
-                    <img src="{{currentUser.photoURL}}" class="rounded" alt="avatar">
+                    <img src="{{userProfile.photoUrl}}" class="rounded" alt="avatar">
                     <h6>Upload a different photo...</h6>
                     <input #file type="file" accept="image/*" class="text-center center-block well well-sm">
                     <button class="btn btn-success" (click)="onSubmitPicture(file.files[0])">Submit</button>
