Chatlist working with logged user

--- a/OLX-Slayer/src/app/chat/chatlist/chatlist.component.html
+++ b/OLX-Slayer/src/app/chat/chatlist/chatlist.component.html
@@ -1,8 +1,11 @@
-<h2>
-  Chats of {{loggedUsername}}:
-</h2>
+<ng-container *ngIf="!isDataLoaded">
+  <h1>Loading chats...</h1>
+</ng-container>
 
 <ng-container *ngIf="isDataLoaded">
+  <h2>
+    Chats of {{loggedUsername}}:
+  </h2>
   <div class="row" *ngFor="let chat of chats">
     <div class="col md6 s12 m6">
       <div class="card red darken-1">
