--- a/OLX-Slayer/src/app/chat/chatroom/chatroom.component.html
+++ b/OLX-Slayer/src/app/chat/chatroom/chatroom.component.html
@@ -1,3 +1,7 @@
+<ng-container *ngIf="!isDataLoaded">
+  <h1>Loading chat...</h1>
+</ng-container>
+
 <ng-container *ngIf="isDataLoaded">
   <app-messages-list
     [loggedUsername]="loggedUsername"
