--- a/OLX-Slayer/src/app/components/create.advertisment/create.advertisment.component.html
+++ b/OLX-Slayer/src/app/components/create.advertisment/create.advertisment.component.html
@@ -8,7 +8,7 @@
       </div>
       <div class="form-group">
         <label for="heading">Heading:  *</label>
-        <input type="text" id="heading" placeholder="Heading" name="heading" class="form-control" required (ngModel)="heading">
+        <input type="text" id="heading" placeholder="Heading" name="heading" class="form-control" required ngModel>
       </div>
       <br>
       <div class="form-group">
@@ -32,7 +32,7 @@
       <br>
       <div class="form-group">
         <label for="description">Description:  *</label>
-        <textarea id="description" placeholder="Description" name="description" class="form-control" required (ngModel)="description"></textarea>
+        <textarea id="description" placeholder="Description" name="description" class="form-control" required ngModel></textarea>
       </div>
       <br>
       <div class="form-group">
