--- a/OLX-Slayer/src/app/profiles/public.profile/public.profile.component.html
+++ b/OLX-Slayer/src/app/profiles/public.profile/public.profile.component.html
@@ -4,7 +4,7 @@
         <!-- left column -->
         <div class="col-md-4 col-sm-6 col-xs-12">
             <div class="text-center">
-                <img src="{{ (userProfile | async)?.photoUrl }}" class="img-circle" alt="avatar">
+                <img src="{{ (userProfile | async)?.photoUrl }}" style="width: 100%; height: 100%" class="img-circle" alt="avatar">
             </div>
             <br>
             <div class="col-md-4 col-sm-6 col-xs-12">
