--- a/OLX-Slayer/src/app/profiles/user.profile/user.profile.component.html
+++ b/OLX-Slayer/src/app/profiles/user.profile/user.profile.component.html
@@ -75,7 +75,7 @@
             </tab>
             <tab heading="Profile Picture">
                 <div class="text-center">
-                    <img src="{{userProfile.photoUrl}}" class="rounded" alt="avatar">
+                    <img src="{{userProfile.photoUrl}}" style="width: 50%; height: 50%" class="rounded" alt="avatar">
                     <h6>Upload a different photo...</h6>
                     <input #file type="file" accept="image/*" class="text-center center-block well well-sm">
                     <button class="btn btn-success" (click)="onSubmitPicture(file.files[0])">Submit</button>
